image name corrected

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Używany samochód elektryczny - co warto wiedzieć przed zakupem?</title>
- <meta property="og:image" content="images/og_image">
+ <meta property="og:image" content="images/share.png">
  <link rel="icon" href="images/icon_image.png">
  <link href="css/style.css" rel="stylesheet">
  <link href="css/button.css" rel="stylesheet">
